# http-server-cpp

./: .gitattributes  .gitignore  CMakeLists.txt  DOCUMENTATION.md  LICENSE  README.md
.github/workflows/: ci.yml
certs/: server.crt  server.key
config/: https_config.json  server_config.json
docker/: Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf  prometheus.yml  run.sh
include/: compression.hpp  connection.hpp  rate_limiter.hpp  request.hpp  response.hpp  server.hpp  ssl_connection.hpp  thread_pool.hpp  websocket.hpp
public/: index.html
scripts/: benchmark.sh  build.sh  run.sh
src/: compression.cpp  connection.cpp  main.cpp  rate_limiter.cpp  request.cpp  response.cpp  server.cpp  ssl_connection.cpp  thread_pool.cpp  websocket.cpp
test/: README.md  test_etag.cpp  test_http_protocol.cpp  test_https.cpp  test_performance.cpp  test_rate_limiter.cpp  test_request.cpp  test_response.cpp  test_security.cpp  test_server.cpp  test_websocket.cpp
